style view2.html

--- a/src/main/resources/templates/view1.html
+++ b/src/main/resources/templates/view1.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <!-- no styling -->
-        <h1>Succes</h1>
+        <h1>Success</h1>
         <p>You have login with a session successfully</p>
         <a class="btn btn-primary" href="/listing">Movie Listing</a>
 
